--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,13 +13,13 @@
                 "-stdlib=libc++",
                 "./src/**.cpp",
                 "-o",
-                "./bin/Main.out",
+                "./bin/App.out",
             ]
         },
         {
             "label": "run",
             "type":"shell",
-            "command":"./bin/Main.out",
+            "command":"./bin/App.out",
             "dependsOn":["build c++"],
             "group": {
                 "kind":"build",
